# MPEI

./: README.md
10_семестр/Интеллектуальные_Системы/: Лекции.txt
10_семестр/Организационное_Поведение/: Оргповедение_ПСЗ_2024.docx
10_семестр/Организация_Научных_Исследований/: Занятие 14.05.2024 + Задание для КМ4.docx
10_семестр/Программное_Обеспечение_Высокопроизводительных_Вычислительных_Систем/: ЛР1.docx
10_семестр/Технологии_Разработки_Программного_Обеспечения/: Братко И. Программирование на языке Пролог  для искусственного интеллекта.rar
11_sem/МПИАС_ЭВМ/: 1_Matritsy_k_zadaniam_1-3.doc  1_Zadania_1_2_3.doc  Kretov_N_V_Raschetnoe_zadanie_1_MPIAS_EVM.docx  RZ_1.xlsx  RZ_2.xlsx  SadokhaNV_RZ_4_Ispravlennyi_774.docx  Балашов_СА_А-07м-23_РЗ1_МПиАС_ЭВМ.docx  Балашов_СА_А-07м-23_РЗ2_МПиАС_ЭВМ.docx  РЗ 2.xlsx
11_sem/ОНИ/: Smeta.xlsx  gb-pril13-1_2024.docx  xd_pril13-2_2024.docx  А-07м-23_Балашов_Заявка.docx  А-07м-23_Балашов_Патенты.docx  А-07м-23_Балашов_Смета.docx  А-07м-23_Балашов_Статьи.docx  км2ОН.docx
11_sem/ЦТОИ/: ЦТОИ.txt
1_семестр/: Autodesk license details.eml
1_семестр/Special/: Dnevnik_ispravlenny.docx  Zadanie_ispravlennoe.docx
2_семестр/: LAB_2.doc  Lab-1-StrSet2017-35.doc  Lab-2-TypedFile2016-35.doc  Lab-3-DynList2017.doc  Номер варианта.docx
5_семестр/: титульник.docx
8_семестр/Распределенные_Вычисления/Lab1_OMP/: CMakeLists.txt  ЛР1_РВ_Балашов_А-08-19.txt
8_семестр/Распределенные_Вычисления/Lab2_MPI/: CMakeLists.txt  LR2_BalKretPoz_A-08-19.docx  RV2.csv  RV2.numbers  RV2.xlsx  main  main.cpp
9_семестр/: Titulnik.docx  тезисы.docx
(+2177 files in other folders)
